--- a/py4java/package.json
+++ b/py4java/package.json
@@ -14,13 +14,42 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.4",
+    "@monaco-editor/react": "^4.6.0",
+    "@popperjs/core": "^2.11.8",
+    "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.5.1",
+    "body-parser": "^1.20.2",
+    "csv-parse": "^5.5.2",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.4",
+    "lodash": "^4.17.21",
+    "md-block": "^0.0.1",
+    "monaco-editor": "^0.44.0",
+    "monaco-themes": "^0.4.4",
+    "openai": "^4.13.0",
+    "papaparse": "^5.4.1",
+    "postcss": "^8.4.31",
+    "react-markdown": "^9.0.0",
+    "react-popper": "^2.3.0",
+    "react-router-dom": "^6.16.0",
+    "react-select": "^5.7.7",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^9.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node-env-run server --exec nodemon | pino-colada"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +68,25 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.200",
+    "@types/papaparse": "^5.3.9",
+    "@types/react-select": "^5.0.1",
+    "@types/react-syntax-highlighter": "^15.5.9",
+    "@types/react-toastify": "^4.1.0",
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
+    "node-env-run": "^4.0.2",
+    "nodemon": "^2.0.20",
+    "pino-colada": "^1.5.1",
+    "process": "^0.11.10",
+    "stream-http": "^3.2.0",
+    "tailwindcss": "^3.3.3",
+    "ts-loader": "^9.5.0",
+    "url": "^0.11.3"
+  },
+  "type": "module",
+  "proxy": "http://127.0.0.1:3001/",
+  "main": "tailwind.config.js"
 }
