--- a/py4java/package.json
+++ b/py4java/package.json
@@ -88,5 +88,11 @@
   },
   "type": "module",
   "proxy": "http://127.0.0.1:3001/",
-  "main": "tailwind.config.js"
+  "main": "tailwind.config.js",
+  "jest": {
+    "moduleNameMapper": {
+      "react-markdown": "<rootDir>/node_modules/react-markdown/react-markdown.min.js",
+      "axios": "axios/dist/node/axios.cjs"
+    }
+  }
 }
