--- a/py4java/package.json
+++ b/py4java/package.json
@@ -94,7 +94,7 @@
   "jest": {
     "moduleNameMapper": {
       "react-markdown": "<rootDir>/node_modules/react-markdown/react-markdown.min.js",
-      "axios": "axios/dist/node/axios.cjs",
+      "axios": "axios/dist/node/axios.cjs"
       }
     }
 }
