--- a/py4java/.env
+++ b/py4java/.env
@@ -2,4 +2,15 @@ DANGEROUSLY_DISABLE_HOST_CHECK = true
 REACT_APP_RAPID_API_KEY = 'dbc41ce526msh797a0ef8eca77e9p1f5aa8jsnc727e0acd7e2'
 REACT_APP_RAPID_API_HOST = 'judge0-ce.p.rapidapi.com'
 REACT_APP_RAPID_API_URL = 'https://judge0-ce.p.rapidapi.com/submissions'
-OPENAI_SECRET_KEY='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'
+OPENAI_SECRET_KEY = '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'
+POSTGRESQL_USER = 'bjijfcykxcskxtqu'
+POSTGRESQL_HOST = '102.134.147.233'
+POSTGRESQL_DATABASE = 'sncaqvzyaitjrgivdbrlhkfp'
+POSTGRESQL_PASSWORD = 'M4BX5VAqDOKMloPvac_zYnRWRP<osRO1'
+POSTGRESQL_POST = '32761'
+CAS_DEMOUSER = "jereyi"
+CAS_ENABLED = true
+CAS_URL = "https://localhost:3000/"
+CAS_LOGIN = "https://fed.princeton.edu/cas/login",
+CAS_LOGOUT = "https://fed.princeton.edu/cas/logout"
+CAS_VALIDATE = "https://fed.princeton.edu/cas/validate"
