--- a/py4java/package.json
+++ b/py4java/package.json
@@ -31,6 +31,8 @@
     "monaco-themes": "^0.4.4",
     "openai": "^4.13.0",
     "papaparse": "^5.4.1",
+    "passport": "^0.6.0",
+    "passport-custom": "^1.1.1",
     "pg": "^8.11.3",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
