--- a/py4java/package.json
+++ b/py4java/package.json
@@ -36,6 +36,7 @@
     "pg": "^8.11.3",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-cas-client": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.0",
     "react-popper": "^2.3.0",
