Finish enabling CAS authentification

--- a/py4java/.env
+++ b/py4java/.env
@@ -8,9 +8,8 @@ POSTGRESQL_HOST = '102.134.147.233'
 POSTGRESQL_DATABASE = 'sncaqvzyaitjrgivdbrlhkfp'
 POSTGRESQL_PASSWORD = 'M4BX5VAqDOKMloPvac_zYnRWRP<osRO1'
 POSTGRESQL_POST = '32761'
-CAS_DEMOUSER = "jereyi"
-CAS_ENABLED = true
-CAS_URL = "https://localhost:3000/"
-CAS_LOGIN = "https://fed.princeton.edu/cas/login",
-CAS_LOGOUT = "https://fed.princeton.edu/cas/logout"
-CAS_VALIDATE = "https://fed.princeton.edu/cas/validate"
+
+
+SERVER_URL = "http://localhost:3001"
+CLIENT_URL = "http://localhost:3000"
+CAS_ENDPOINT = "https://fed.princeton.edu/cas"
