--- a/py4java/package.json
+++ b/py4java/package.json
@@ -52,7 +52,9 @@
     "timers-browserify": "^2.0.12",
     "typescript": "^4.9.5",
     "util": "^0.12.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "cas": "^0.0.3",
+    "ejs": "^3.1.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -96,6 +98,7 @@
     "tailwindcss": "^3.3.3",
     "ts-loader": "^9.5.0",
     "url": "^0.11.3"
+    
   },
   "type": "module",
   "proxy": "http://127.0.0.1:3001/",
