--- a/py4java/package.json
+++ b/py4java/package.json
@@ -19,16 +19,19 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "body-parser": "^1.20.2",
+    "cas": "^0.0.3",
     "cheerio": "^1.0.0-rc.12",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "csv-parse": "^5.5.2",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
+    "jest-mock-axios": "^4.7.3",
     "lodash": "^4.17.21",
     "md-block": "^0.0.1",
     "monaco-editor": "^0.44.0",
@@ -52,9 +55,7 @@
     "timers-browserify": "^2.0.12",
     "typescript": "^4.9.5",
     "util": "^0.12.5",
-    "web-vitals": "^2.1.4",
-    "cas": "^0.0.3",
-    "ejs": "^3.1.9"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -98,7 +99,6 @@
     "tailwindcss": "^3.3.3",
     "ts-loader": "^9.5.0",
     "url": "^0.11.3"
-    
   },
   "type": "module",
   "proxy": "http://127.0.0.1:3001/",
