--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,9 @@
   "name": "py4java",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.10.0"
+  },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
@@ -85,7 +88,7 @@
     "@types/lodash": "^4.14.200",
     "@types/papaparse": "^5.3.9",
     "@types/react-select": "^5.0.1",
-    "@types/react-syntax-highlighter": "^15.5.9",
+    "@types/react-syntax-highlighter": "^15.5.10",
     "@types/react-toastify": "^4.1.0",
     "@vitest/coverage-v8": "^0.34.6",
     "assert": "^2.1.0",
