--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,6 +21,9 @@
     "jsx": "react-jsx",
     "types": [
       "jest"
+    ],
+    "typeRoots": [
+      "./node_modules/@types/"
     ]
   },
   "include": [
