--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,6 @@
   "name": "py4java",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "20.10.0"
-  },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
@@ -53,6 +50,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
     "react-syntax-highlighter": "^15.5.0",
+    "@types/react-syntax-highlighter": "^15.5.10",
     "react-toastify": "^9.1.3",
     "timers-browserify": "^2.0.12",
     "typescript": "^4.9.5",
