--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,7 +21,7 @@
     "jsx": "react-jsx",
     "typeRoots": [
       "./types",
-      "./node_modules/@types/"
+      "./node_modules/@types"
     ]
   },
   "include": [
