--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "pg-pool": "^3.6.1",
     "postcss": "^8.4.31",
     "util": "^0.12.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+        "node-env-run": "^4.0.2",
+        "nodemon": "^2.0.20",
+        "pino-colada": "^1.5.1"
   },
   "main": "src/index.js",
   "scripts": {
@@ -58,9 +61,6 @@
     "chai": "^4.3.10",
     "mocha": "^10.2.0",
     "msw": "^2.0.1",
-    "node-env-run": "^4.0.2",
-    "nodemon": "^2.0.20",
-    "pino-colada": "^1.5.1",
     "process": "^0.11.10",
     "stream-http": "^3.2.0",
     "supertest": "^6.3.3",
