--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node-env-run src --exec nodemon | pino-colada",
+    "start:dev": "node-env-run src --env .env.local --exec nodemon | pino-colada",
     "heroku-postbuild": "cd client && npm install && npm run build",
     "test": "NODE_ENV=test PORT=6666 vitest --watch --coverage --threads --dir src/tests"
   },
