--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "pg": "^8.11.3",
     "pg-pool": "^3.6.1",
     "postcss": "^8.4.31",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
