--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-      "node": "20.10.0"
-    },
+    "node": "20.10.0"
+  },
   "dependencies": {
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
@@ -22,19 +22,19 @@
     "lodash": "^4.17.21",
     "md-block": "^0.0.1",
     "mock-session": "^0.0.5",
+    "node-env-run": "^4.0.2",
     "node-fetch": "^3.3.2",
+    "nodemon": "^2.0.20",
     "openai": "^4.13.0",
     "papaparse": "^5.4.1",
     "passport": "^0.6.0",
     "passport-custom": "^1.1.1",
     "pg": "^8.11.3",
     "pg-pool": "^3.6.1",
+    "pino-colada": "^1.5.1",
     "postcss": "^8.4.31",
     "util": "^0.12.5",
-    "web-vitals": "^2.1.4",
-        "node-env-run": "^4.0.2",
-        "nodemon": "^2.0.20",
-        "pino-colada": "^1.5.1"
+    "web-vitals": "^2.1.4"
   },
   "main": "src/index.js",
   "scripts": {
